style: fix centre alignment of loader

--- a/src/css/Loader.css
+++ b/src/css/Loader.css
@@ -5,7 +5,6 @@
   width: 100%;
   height: 100%;
   padding-top: 20vh;
-  justify-items: center;
   background-color: var(--dark-purple);
   z-index: 2;
   transition: opacity 0.15s ease-out;
@@ -26,6 +25,7 @@
   background: var(--_c) / 100% 50%, var(--_c) / 50% 100%;
   border-radius: 50%;
   animation: l29 2s infinite linear;
+  margin: auto;
 }
 
 @keyframes l29 {
